@@ -1,4 +1,4 @@
-.\" RCSid "$Id: obj2mesh.1,v 1.12 2014/01/24 01:26:44 greg Exp $"
+.\" RCSid "$Id: obj2mesh.1,v 1.13 2017/03/03 01:25:27 greg Exp $"
 .TH OBJ2MESH 1 03/11/03 RADIANCE
 .SH NAME
 obj2mesh - create a compiled RADIANCE mesh file from Wavefront .OBJ input
@@ -14,6 +14,8 @@ obj2mesh - create a compiled RADIANCE mesh file from Wavefront .OBJ input
 .B "\-r maxres"
 ][
 .B \-w
+][
+.B \-v
 ]
 [
 .B "input.obj"
@@ -78,6 +80,9 @@ The default is 16384.
 The
 .I \-w
 option suppresses warnings.
+The
+.I \-v
+option prints out final mesh statistics.
 .PP
 Although the mesh file format is binary, it is meant to be portable
 between machines.
